--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ subjects:
 - !lcsh 'Paris (France) -- Intellectual life'
 - !lcsh 'Paris (France) -- Social life and customs'
 - !lcc 'DC'
+- GITenberg
 title: 'Vie de Bohème: A Patch of Romantic Paris'
 url: http://www.gutenberg.org/ebooks/40293
